# Thrift_Client_Server

./: CMakeLists.txt  Client.cpp  Server.cpp  service.thrift
Implementation/: CMakeLists.txt  ClientImpl.cpp  ClientImpl.hpp  ServerImpl.cpp  ServerImpl.hpp
gen-cpp/: CMakeLists.txt  Messenger.cpp  Messenger_server.skeleton.cpp
gen-cpp/include/: Messenger.h  service_types.h
